# bluerov_control

./: CMakeLists.txt  package.xml  setup.py
cfg/: DepthControl.cfg  ThrusterTest.cfg
config/: DepthControl.cfg  PidControl.cfg  depth_control_default.yaml  depth_control_simulation.yaml  surge_control_ground_truth.yaml  surge_control_simulation.yaml  sway_control_ground_truth.yaml  yaw_control_default.yaml  yaw_control_ground_truth.yaml
launch/: arm.launch  bezier_path_generator.launch  canonical_trajectory_generator.launch  configuration.launch  controller.launch  depth_control.launch  gazebo_localization_absolute.launch  gazebo_localization_full.launch  gazebo_localization_ground_truth.launch  gazebo_localization_object.launch  gazebo_parameter_identification.launch  ground_truth_helper.launch  localization.launch  localization_absolute.launch  localization_for_experiment.launch  localization_full.launch  localization_object.launch  surge_control.launch  sway_control.launch  trajectory_generator.launch  vehicle_test.launch  yaw_control.launch
msg/: Configuration.msg  ControllerErrors.msg  ControllerSetpoints.msg  PathTargets.msg
nodes/: arming.py  bezier_client_unused.py  bezier_generator.py  bezier_generator_unused.py  canonical_trajectory_generator.py  configuration_helper.py  depth_control.py  depth_control_node  depth_control_node2.py  depth_setpoint.py  differentiator.py  ground_truth_helper.py  mixer.py  path_follower.py  path_generator.py  signal_interpreter.py  signal_sender.py  surge_control.py  sway_control.py  thruster_tester.py  trajectory_generator.py  (+2 more)
(+8 files in other folders)
